--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "ag-grid-community": "^31.3.1",
+    "ag-grid-react": "^31.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
