--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@mui/material": "^5.15.16",
     "ag-grid-community": "^31.3.1",
     "ag-grid-react": "^31.3.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
