--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@mui/material": "^5.15.16",
     "ag-grid-community": "^31.3.1",
     "ag-grid-react": "^31.3.1",
+    "apexcharts": "^3.49.0",
+    "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.12.1",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
